--- a/styles/_style.scss
+++ b/styles/_style.scss
@@ -161,10 +161,13 @@ $border-1: 3vh;
   visibility: hidden;
   background-size: cover;
   background-position: 50% 100%;
+  transform-origin: left top;
 
-  &.hide {
-    animation-name: scaleDown;
-    animation-duration: 0.5s;
+  &.hideGame {
+    animation-name: hideGame;
+    animation-timing-function: linear;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
     animation-iteration-count: 1;
   }
 
@@ -765,6 +768,16 @@ $border-1: 3vh;
 
   100% {
     transform: translateZ(-1px) scaleX(1);
+  }
+}
+
+@keyframes hideGame {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
   }
 }
 
