--- a/styles/main.css
+++ b/styles/main.css
@@ -199,7 +199,7 @@ a {
   visibility: hidden;
   background-size: cover;
   background-position: 50% 100%;
-  transform-origin: left top;
+  transform-origin: right top;
 }
 .game.hideGame {
   animation-name: hideGame;
